--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         targetSdkVersion 33
 
         // Version Meta
-        versionCode 103
-        versionName "1.41.0"
+        versionCode 104
+        versionName "1.42.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -90,15 +90,15 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
 
     // Vico (Chart)
-    def vico_version = '1.4.3'
+    def vico_version = '1.5.1'
     implementation "com.patrykandpatryk.vico:compose:$vico_version"
     implementation "com.patrykandpatryk.vico:compose-m3:$vico_version"
 
     // Bottom Sheet
-    implementation 'io.github.dokar3:sheets:0.2.4'
+    implementation 'io.github.dokar3:sheets:0.2.9'
 
     // Profile Installer
     implementation "androidx.profileinstaller:profileinstaller:1.2.0"
@@ -152,7 +152,7 @@ dependencies {
     implementation 'com.github.re-ovo:slanted-text-compose:1.0.2'
 
     // Motion Animation
-    def motion_anim_version = "0.10.2-beta"
+    def motion_anim_version = '0.11.0-alpha'
     implementation "io.github.fornewid:material-motion-compose-core:$motion_anim_version"
 
     // Lottie
@@ -160,7 +160,7 @@ dependencies {
 
     // Paging3
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha16"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -168,7 +168,7 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     // Navigation for JetpackCompose
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // Coil
     implementation "io.coil-kt:coil-compose:$coil_version"
